<resources>
    <string name="app_name">Aplikacja_2022_09v2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="prawy_text_box">Podaj wiadomość</string>
    <string name="prawy_button">Kliknij</string>
    <string name="return_button">Główna</string>
    <string name="taskOneButton">Zadanie 1</string>
    <string name="editTextName">Imię</string>
    <string name="editTextSurname">Nazwisko</string>
    <string name="editTextMail">email</string>
    <string name="sendButton">Wyślij</string>
    <string name="taskTwoButton">Zadanie 2</string>
    <string name="welcomeText">Podaj swoje imię:</string>
    <string name="hintName">Podaj imię</string>


</resources>